@@ -7,37 +7,47 @@ import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.Serializable;
+import java.math.BigDecimal;
 import java.util.Comparator;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.ListIterator;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Set;
 import java.util.TreeMap;
+import java.util.TreeSet;
 import java.util.Vector;
-import java.util.Collections;;
+import java.util.Collections;
+
+import com.sun.org.apache.xpath.internal.Arg;
 
 public class FingerPrint implements Serializable,Comparable<FingerPrint> {
 
 	private static final long serialVersionUID = 8559602924873961446L;
 
 	public Map<Integer, LinkedList<Period>> totals_  = new TreeMap<Integer, LinkedList<Period>>();;
-	public List<Period> periodsByTime_;
-	public List<Period> periodsByCount_;	
 
-	public class Period implements Serializable
+
+	static public class Period implements Serializable
 	{
 		private static final long serialVersionUID = -107614039539312946L;
-		
 		public Frequency frequency;
-		public Long begin;
+		public Long begin = new Long(0);
 		public Long end = new Long(0);
-		public Integer count = 1;
-		
+		public Integer count = 1;		
 		public Period(Frequency frequency, Long begin)
 		{
 			this.frequency = frequency;
 			this.begin =  begin;
+		}
+		
+		@Override
+		public boolean equals(Object obj)
+		{
+			Period p = (Period)obj;
+			return  p.begin == begin && p.frequency.frequency ==  frequency.frequency;
 		}
 	}
 	
@@ -49,6 +59,16 @@ public class FingerPrint implements Serializable,Comparable<FingerPrint> {
 		@Override
 		public int compare(Period arg0, Period arg1) {
 			return arg0.frequency.frequency.compareTo(arg1.frequency.frequency);
+		}		
+	}
+	
+	public class PeriodByLevel implements Comparator<Period>,Serializable
+	{
+		private static final long serialVersionUID = 7617850436377389469L;
+
+		@Override
+		public int compare(Period arg0, Period arg1) {
+			return -arg0.frequency.level.compareTo(arg1.frequency.level);
 		}		
 	}
 	
@@ -72,118 +92,94 @@ public class FingerPrint implements Serializable,Comparable<FingerPrint> {
 	}
 	
 	private String id_;
-	private int count_ = 0;
 	private long time_;
+	private LinkedList<LinkedList<Period>> periods_  =  new LinkedList<LinkedList<Period>>();
+	private int window_size_;
 	
 	public long Time()
 	{
 		return time_;
 	}
-	public FingerPrint(String id, long time)
+	public FingerPrint(String id, long time, int windowSize)
 	{
 		id_ = id; 
 		time_ = time;
-		periodsByTime_ = new LinkedList<Period>();
-		periodsByCount_ = new LinkedList<Period>();
+		window_size_ = windowSize;
 	}
 
 	public String Id() { return id_; }
+
 	
-	
-	public Vector<Period> Exists(long time, Frequency[] frequency)
+	public List<Period> Exists(int index, Frequency[] frequency)
 	{
-		Vector<Period> vector = new Vector<Period>();
+		LinkedList<Period> list = periods_.get(index);
+		if (list == null) 
+		{
+			if (frequency == null)
+			{
+				return new LinkedList<Period>();
+			}
+			return null;
+		}
+
+		Vector<Frequency> vector = new Vector<Frequency>();
 		for (int i = 0; i < frequency.length; ++i)
-		{				
-			for (Period p : periodsByTime_)
-			{
-				if (p.begin <= time && time <= p.end)
-				{
-						if (Math.abs(frequency[i].frequency - p.frequency.frequency) <= 4)
-						{
-							//Utils.Dbg("Compared %d[%d]  %d/[%d-%d]" ,frequency[i].frequency, p.frequency, time, p.begin,p.end );
-							vector.add(p);
-							break;
-						}
-					}
-				}
+		{
+			vector.add(frequency[i]);
 		}
 		
-		//Utils.Dbg("Compared %d", vector.size());
-		/*fv.setSize(frequency.length);
-		for (int i =0; i < frequency.length; ++i)
+		List<Period> ret = new LinkedList<Period>();
+		for (Period p : list)
 		{
-			fv.set(i, frequency[i].frequency);
-		}
-		Vector<Period> vector = new Vector<Period>();
-		
-		for (Period p : periodsByTime_)
-		{
-			if (p.begin <= time && time <= p.end)
+			if (ret.contains(p)) continue;
+			for (int i = 0; i < vector.size(); ++i)
 			{
-			//	Utils.Dbg("%d [%d - %d]", p.frequency, p.begin, p.end);
-				for (int i = 0; i < fv.size(); ++i)
+				if (vector.get(i).frequency.compareTo(p.frequency.frequency) == 0)
 				{
-					if (Math.abs(fv.get(i) - p.frequency) <= 4)
-					{
-						Utils.Dbg("Compared %d[%d]  %d/[%d-%d]" ,fv.get(i), p.frequency, time, p.begin,p.end );
-						vector.add(p);
-						fv.removeElementAt(i);
-						break;
-					}
+					ret.add(p);
+					vector.remove(i);
+					break;
 				}
 			}
-		}*/
-		
-		return vector; 
+		}
+		return ret; 
 	}
 		
 	private int totalPeriods_ = 0;
-	private int totalCounts_ = 0;
+	private double maxLevel = 0;
+	private double minLevel = 0;
 	
-	public Period Put(Period period)
+	public boolean Add(LinkedList<Period> periods)
 	{
-		++totalPeriods_;
-		totalCounts_ += period.count;
-		
-		periodsByTime_.add(period);
-		Collections.sort(periodsByTime_, new PeriodByTime());
-		periodsByCount_.add(period);
-		Collections.sort(periodsByCount_, new PeriodByCount());
-		LinkedList<Period> vp = totals_.get(period.frequency.frequency);
-		
-		if (vp == null)
+		if (periods.isEmpty() || periods.getFirst().frequency.level.doubleValue() < minLevel) 
 		{
-			vp = new LinkedList<Period>();
-			vp.add(period);
-			++count_;
-			totals_.put(period.frequency.frequency, vp);
+			periods_.add(null);	
+			return false;
 		}
-		else
-		{
-		/*	Period lp = vp.getLast();
-			if (period.begin - lp.end  < Config.Instance().WindowSize() )
-			{
-				lp.end = period.end;
-				lp.count += period.count;
-			}
-			else
-			{*/
-				vp.add(period);
-				++count_;
-		//	}
-		}
-		return period;
+		totalPeriods_+=periods.size();
+		maxLevel = Math.max(maxLevel, periods.getFirst().frequency.level.doubleValue());
+		minLevel = Math.max(minLevel, periods.getLast().frequency.level.doubleValue());
+		periods_.add(periods);
+		return true;
 	}
 
 	public int Count()
 	{
-		return periodsByTime_.size();
+		int i = 0;
+		for(LinkedList<Period> p : periods_)
+		{
+			if (p == null) continue;
+			i+=p.size();
+		}
+		return i;
 	}
 	
+	public int Frames()
+	{
+		return periods_.size();
+	}
 	
-	
-	 public void Serialize(String filename) throws IOException
+	public void Serialize(String filename) throws IOException
 	{
 		FileOutputStream fos = new FileOutputStream(filename);
 		ObjectOutputStream oos = new ObjectOutputStream(fos);
@@ -192,142 +188,47 @@ public class FingerPrint implements Serializable,Comparable<FingerPrint> {
 		oos.close();
 	}
 	 
-	 public Vector<LinkedList<Period>> vector_;
-	 
-	 double max = 0;
-	 double min = Double.MAX_VALUE;
-	 
-	 public void Set(Vector<LinkedList<Period>> vector)
-	 {
-		 vector_ = vector;
-		 
-	 }
-	 
- 	 public void ThinOut()
- 	 { 
- 		 
- 		 
- 		/*for (Period p : periodsByTime_)
- 		{
- 			max =Math.max(max, p.frequency.level.doubleValue());
-			min = Math.min(min, p.frequency.level.doubleValue());
- 		}
- 		
- 		Iterator<Period> it = periodsByTime_.iterator();
- 		
- 		double mean = (max + min) / 2;
- 		Utils.Dbg("mean:%f  max:%f min:%f",mean,max,min);
- 		while (it.hasNext())
- 		{
- 			Period p = it.next();
- 			
- 			if (p.frequency.level.doubleValue() < mean)
- 			{
- 				it.remove();
- 			}
- 		}*/
- 		
- 		for (Period p : periodsByTime_)
- 		{
- 			Utils.Dbg("%d [%d - %d] - %f", p.frequency.frequency, p.begin, p.end, p.frequency.level);
- 		}
- 		
- 		 
- 		/*periodsByTime_.clear();
- 		int M = (int) Math.ceil((double)totalCounts_ / totalPeriods_);
- 		Utils.Dbg("%d",M);
- 		{
-	 		Iterator<Entry<Integer, LinkedList<Period>>> it = totals_.entrySet().iterator();
-			while (it.hasNext())
-			{
-				Entry<Integer, LinkedList<Period>>c = it.next();
-				LinkedList<Period> ps= c.getValue();
-				Iterator<Period> pit = ps.iterator();
-				while (pit.hasNext())
-				{
-					Period p = pit.next();
-					
-					max =Math.max(max, p.frequency.level.doubleValue());
-					min = Math.min(min, p.frequency.level.doubleValue());
-					
-					
-					if (p.count <= M )
-					{
-						pit.remove();
-					}
-					else
-					{
-						//	p.begin =  new Long((long)Math.floor((double)p.begin  / Config.Instance().WindowSize()) * Config.Instance().WindowSize());
-						//	p.end = new Long((long)Math.ceil((double)p.end  / Config.Instance().WindowSize()) * Config.Instance().WindowSize());
-							periodsByTime_.add(p);
-					}
-				}
-				
-				if (ps.size() == 0)
-				{
-					it.remove();
-				}
-			}
- 		 }
-		
-		if (! periodsByTime_.isEmpty())
+	public void ThinOut()
+	{ 
+		Iterator<LinkedList<Period>> it = periods_.iterator();
+		while (it.hasNext())
 		{
-			Collections.sort(periodsByTime_, new PeriodByTime());
-			Period fp = periodsByTime_.get(0);
-			if (fp.begin > 0)
+			LinkedList<Period> list  = it.next();
+			if (list == null) continue;
+			if (list.getFirst().frequency.level.doubleValue() < minLevel)
 			{
-				Iterator<Period> it = periodsByTime_.iterator();
-				while (it.hasNext())
-				{
-					Period p = it.next();
-					p.begin -= fp.begin;
-					p.end   -= fp.begin;
-				}
+				periods_.set(periods_.indexOf(list),null);
 			}
 		}
-		
-		Utils.Dbg("Max:%f Min:%f", max, min);
-		*/
-		
-		
+		while (periods_.getFirst() == null)
+		{
+			periods_.removeFirst();
+		}
+		while (periods_.getLast() == null)
+		{
+			periods_.removeLast();
+		}
 	 }
 	 
 	@Override
 	public String toString()
 	{
 		String str = new String();
+		int i = 0;
+		for (LinkedList<Period> list: periods_)
+		{
+			str+=String.format("%d:\n", i++); 
+			if (list == null) 
 			{
-			Iterator<Entry<Integer, LinkedList<Period>>> it  =totals_.entrySet().iterator();
-			while (it.hasNext())
+				str+="\tnull\n\n";
+				continue;
+			}
+			for (Period p: list)
 			{
-				Entry<Integer, LinkedList<Period>>c = it.next();		
-				Integer fr = c.getKey();
-				LinkedList<Period> ps= c.getValue();
-				
-				Iterator<Period> pit = ps.iterator();
-				
-				str+=String.format("FREQ: %d\n", fr);
-				
-				while (pit.hasNext())
-				{
-					Period p = pit.next();
-					str+=String.format("\t%d - %d  [%d] %f\n", p.begin, p.end, p.count,p.frequency.level);
-				}
+				str+=String.format("\t%d  [%d - %d] %f\n", p.frequency.frequency, p.begin, p.end, p.frequency.level);
 			}
 			str+="\n";
 		}
-		
-		{
-			Iterator<Period> it = periodsByTime_.iterator();
-			
-			while (it.hasNext())
-			{
-				Period p = it.next();
-				str+=String.format("%d  [%d - %d] [%d] %f\n", p.frequency.frequency, p.begin, p.end, p.count,p.frequency.level);
-			}
-			
-		}
-		str+="\n";
 		return str;
 	}
 	
